--- a/Exercises/connect-4.ipynb
+++ b/Exercises/connect-4.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Connect 4"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -29,13 +22,6 @@
     "\n",
     "# Board can be initiatilized with `board = np.zeros((NUM_COLUMNS, COLUMN_HEIGHT), dtype=np.byte)`\n",
     "# Notez Bien: Connect 4 \"columns\" are actually NumPy \"rows\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Basic Functions"
    ]
   },
   {
@@ -94,65 +80,76 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Montecarlo Evaluation"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importante\n",
     "def _mcSquillero(board, player):\n",
+    "#funzione che esegue il resto della partita randomicamente, il risultato della simulazione aiuta a selezionare la mossa successiva\n",
+    "\n",
     "    p = -player\n",
     "    while valid_moves(board):\n",
+    "    #ciclo per completare la partita\n",
+    "    \n",
     "        p = -p\n",
     "        c = np.random.choice(valid_moves(board))\n",
     "        play(board, c, p)\n",
     "        if four_in_a_row(board, p):\n",
+    "        #controlla se vince qualcuno\n",
     "            return p\n",
     "    return 0\n",
     "\n",
     "def montecarloSquillero(board, player, plays):\n",
+    "#funzione per lanciare un campione di partite random (uguale a quella postata su git dal professore)\n",
     "    montecarlo_samples = plays\n",
     "    cnt = Counter(_mcSquillero(np.copy(board), player) for _ in range(montecarlo_samples))\n",
     "    return (cnt[1] - cnt[-1]) / montecarlo_samples\n",
     "\n",
     "def tryMove(board, player):\n",
-    "    mov = montecarloSquillero(board, player, 25)*player\n",
-    "    #print(mov, \" \",player,'\\t')\n",
+    "    #funzione per testare la fitness della mossa, si basa sulle funzioni riportate in alto per ottenere un valore da assegnare alla mossa\n",
+    "    mov = montecarloSquillero(board, player, 30)*player\n",
+    "    #la moltiplicazione per player serve a normalizzare i valori su una scala da -1 a +1 dove -1 è la fitness minima e +1 quella massima\n",
+    "    #valore generico molto basso da sovrascrivere\n",
     "    counterBest = -20\n",
     "    for c in valid_moves(board):\n",
+    "        #per non rifarla\n",
     "        fakeBoard = np.copy(board)\n",
+    "        #fai la mossa di prova (risposta)\n",
     "        play(fakeBoard, c, -player)\n",
-    "        tmp = montecarloSquillero(fakeBoard, -player, 20)*(-player)\n",
+    "        tmp = montecarloSquillero(fakeBoard, -player, 25)*(-player)\n",
+    "        #la moltiplicazione per player serve a normalizzare i valori su una scala da -1 a +1 dove -1 è la fitness minima e +1 quella massima\n",
     "        if tmp == 1.0:\n",
+    "            #se per una mossa la risposta dell'avversario porta sicuramente a una sconfitta, la fitness viene forzata a un valore molto alto\n",
+    "            #per sottolineare che quella mossa deve essere evitata a tutti i costi\n",
     "            tmp == 10\n",
     "        if counterBest < tmp :\n",
+    "            #peggiore fitness tra le simulazioni, considerare sempre worst case scenario\n",
     "            counterBest = tmp\n",
-    "    print(mov, \" \",player,'\\t', counterBest, \" \",-player, \"  ->   \", mov - counterBest, '\\n')\n",
+    "    #la differenza tra la fitness della mossa e quella della risposta migliore sarà la fitness effettiva della mossa        \n",
     "    return (mov - counterBest)\n",
     "\n",
     "def _mc(board, player):\n",
-    "\n",
+    "#selezione della mossa e verifica delle fitness\n",
     "    best = -20\n",
     "    col = 0\n",
-    "    print(\"Starting best: \", best)\n",
     "    for c in valid_moves(board):\n",
+    "        #per non rifarla ogni ciclo\n",
     "        fakeBoard = np.copy(board)\n",
+    "        #seleziona la mossa disponibile e gioca\n",
     "        play(fakeBoard, c, player)\n",
+    "        if four_in_a_row(fakeBoard, player):\n",
+    "            col = c\n",
+    "            break\n",
+    "        #calcola fitness della mossa\n",
     "        tmp = tryMove(fakeBoard, player)\n",
     "        if best < tmp :\n",
     "            best = tmp\n",
     "            col = c\n",
-    "        print(\"Actual best: \", best,' ', col)\n",
-    "            \n",
+    "    #aggiorna la board reale\n",
     "    play(board, col, player)\n",
     "    if four_in_a_row(board, player):\n",
+    "        #controlla se vince qualcuno\n",
     "        return player\n",
     "    return 0    \n",
     "    \n",
@@ -169,13 +166,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Example"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -188,6 +178,7 @@
     "p=-1\n",
     "tmp = 0\n",
     "while tmp!=1 and tmp!=-1:\n",
+    "    #loop per giocare da solo :c\n",
     "    p=-p\n",
     "    tmp = eval_board(board, p)\n",
     "    print(board)\n",
